Made buttons and empty text field

--- a/button/buttons.html
+++ b/button/buttons.html
@@ -1,5 +1,9 @@
-<h1> Hello World </h1>
+<button type="button">
+    Click Me!
+</button>
 
-<script type="text/javascript" src="index.js">
+<h1 id="text"></h1>
 
-</script>
+<button type="button">
+    Click Me!
+</button>
