--- a/button/buttons.html
+++ b/button/buttons.html
@@ -1,9 +1,23 @@
-<button type="button">
+<head>
+  <link rel="stylesheet" href="button.css">
+</head>
+
+<script type="text/javascript">
+  function firstButtonChange(){
+    document.getElementById('text').textContent = "I'm Right"
+  }
+
+  function secondButtonChange(){
+    document.getElementById('text').textContent = "No, I'm right!"
+  }
+</script>
+
+<button type="button" onclick="firstButtonChange()">
     Click Me!
 </button>
 
 <h1 id="text"></h1>
 
-<button type="button">
+<button type="button" onclick="secondButtonChange()">
     Click Me!
 </button>
