Added button style

--- a/button/buttons.html
+++ b/button/buttons.html
@@ -12,12 +12,12 @@
   }
 </script>
 
-<button type="button" onclick="firstButtonChange()">
+<button type="button" onclick="firstButtonChange()" class="myButton">
     Click Me!
 </button>
 
 <h1 id="text"></h1>
 
-<button type="button" onclick="secondButtonChange()">
+<button type="button" onclick="secondButtonChange()" class="myButton">
     Click Me!
 </button>
