--- a/button/buttons.html
+++ b/button/buttons.html
@@ -12,12 +12,18 @@
   }
 </script>
 
-<button type="button" onclick="firstButtonChange()" class="myButton">
-    Click Me!
-</button>
+<body>
+  <div id="center">
+    <button type="button" onclick="firstButtonChange()" class="myButton">
+        Click Me!
+    </button>
+  </div>
 
-<h1 id="text"></h1>
+    <h1 id="text">Who's Right?</h1>
 
-<button type="button" onclick="secondButtonChange()" class="myButton">
-    Click Me!
-</button>
+  <div id="center">
+    <button type="button" onclick="secondButtonChange()" class="myButton">
+        Click Me!
+    </button>
+  </div>
+</body>
