--- a/hover/hover.html
+++ b/hover/hover.html
@@ -4,5 +4,6 @@
     window.alert( "Hey, I told you not to hover over me!");
   }
 </script>
-
-<h1 onmouseover="onHover()">Don't hover over me</h1>
+<body>
+  <h1 onmouseover="onHover()">Don't Hover Over Me!</h1>
+</body>
