--- a/form/form.html
+++ b/form/form.html
@@ -4,11 +4,12 @@
 </head>
 
 <body>
-  Enter Your Information Below
+  <h1>Enter Your Information Below</h1>
   <form>
-    <input type="text" name="username" placeholder="Username"><br>
-    <input type="text" name="email" placeholder="Email"><br>
-    <input type="password" name="password" placeholder=""="password"><br>
-    <button type="submit" name="submit"> Submit </button><br>
+    <input type="text" name="username" id="username" placeholder="Username"><br>
+    <input type="text" name="email" id="email" placeholder="Email"><br>
+    <input type="password" name="password" id="password" placeholder=""="password"><br>
+    <button type="button" name="submit" onclick="checkPassword()"> Submit </button><br>
   </form>
+  <h1 id="text">Is Your Info Right?</h1>
 </body>
