--- a/form/form.html
+++ b/form/form.html
@@ -5,11 +5,13 @@
 
 <body>
   <h1>Enter Your Information Below</h1>
-  <form>
-    <input type="text" name="username" id="username" placeholder="Username"><br>
-    <input type="text" name="email" id="email" placeholder="Email"><br>
-    <input type="password" name="password" id="password" placeholder=""="password"><br>
-    <button type="button" name="submit" onclick="checkPassword()"> Submit </button><br>
-  </form>
+  <div class="border">
+    <form>
+      <input type="text" name="username" id="username" placeholder="Username"><br>
+      <input type="text" name="email" id="email" placeholder="Email"><br>
+      <input type="password" name="password" id="password" placeholder="Password"><br>
+      <button type="button" name="submit" onclick="checkPassword()"> Submit </button><br>
+    </form>
+  </div>
   <h1 id="text">Is Your Info Right?</h1>
 </body>
